--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ html {
 
 button {
     cursor: pointer;
+    border: none;
+    background: transparent;
+    padding: 0;
+    font-size: inherit;
 }
 
 body {
@@ -19,16 +23,20 @@ body {
 }
 
 a {
-	text-decoration: none;
-	color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 svg {
-	stroke-width: 2;
+    stroke-width: 2;
 }
 
 body,
 #root {
     height: 100%;
     width: 100%;
+}
+
+.react-tiny-popover-container {
+    z-index: 9999;
 }
