--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,7 @@ body,
 .react-tiny-popover-container {
     z-index: 9999;
 }
+
+.ReactModal__Overlay.ReactModal__Overlay--after-open {
+    z-index: 3;
+}
