--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,13 @@ button {
     font-size: inherit;
 }
 
+input {
+    margin: 0;
+    padding: 0;
+    border: none;
+    cursor: inherit;
+}
+
 body {
     position: absolute;
     margin: 0;
