--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -52,6 +52,13 @@ body,
   z-index: 9999;
 }
 
+.ReactModal__Overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
 .ReactModal__Overlay.ReactModal__Overlay--after-open {
   z-index: 99;
 }
